# casual-logger-on-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  tic-tac-toe-2020-07-12.log.toml
examples/: example.rs  example1.rs  example2.rs  example3.rs  example4.rs  example5.rs  example6.rs  example7.rs  example8.rs  fatal.rs  important.rs  minimal.rs  one_point.rs  overall.rs  performance.rs  toml_cover.rs
src/: auto_correct.rs  config.rs  lib.rs  log_file.rs  parser.rs  stringifier.rs  table.rs
src/toml/: auto_correct.rs  mod.rs
