[package]
name = "casual_logger"
version = "0.4.4"
authors = ["むずでょ <muzudho1@gmail.com>"]
edition = "2018"
description = """
This logger with **few settings** to repeat practice of many programming tutorials.  
Not for product use.  
"""
readme = "README.md"
repository = "https://github.com/muzudho/casual-logger-on-rust"
license = "MIT"
keywords = ["logger", "log", "logging"]
categories = ["development-tools::debugging"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
chrono = "0.4"
regex = "1"
# sys-info = "0.7.0"